kubernetes/apps/system-upgrade/tuppr/networkPolicys/np-allow-egress-to-k8s-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-k8s-api
  namespace: system-upgrade
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: system-upgrade
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: tuppr
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kube-apiserver
      ports:
        - protocol: TCP
          port: 6443
